# hostamar.com

./: .auto-scaler-state.json  .dockerignore  .env.docker  .env.example  .env.local.bak  .env.marketing  .env.migrate  .env.production.example  .env.queue  .env.scalup  .env.stripe.example  .env.vercel  .eslintignore  .eslintrc.json  .failover-state  .gitignore  .vercelignore  76.76.21.21  ACTIVATION-COMPLETE.md  AI-API-SETUP-COMPLETE.md  AUTO-DEPLOY-CF.bat  AUTO-DEPLOY-SETUP.bat  AUTO-DEPLOY.bat  AUTO-FIX-ALL.ps1  BACKUP.bat  BILLING_README.md  BROWSER_AUTOMATION.md  CAMOFOX-MARKETING.bat  CEOROADMAP.md  CHECK-LIVE.bat  CHOOSE-DATABASE.md  CLOUDFLARE-AUTO-SETUP.md  CLOUDFLARE-CONNECT.md  CLOUDFLARE-DEPLOY-README.md  CLOUDFLARE-DEPLOY.md  CLOUDFLARE-SETUP.md  CNAME  CRYPTO-PAYMENT-GUIDE.md  Click  DATABASE-FIX-GUIDE.md  (+144 more)
.cloudflare/: pages.json
.github/: BRANCH_PROTECTION.md  CODEOWNERS  DEPLOY_RUNBOOK.md
.hermes/: remote_check.sh
@types/: admin.d.ts
__tests__/: api-validation.test.ts  bkash.test.ts  prisma-mock.ts  scim-provision.test.ts  tenancy.leak.test.ts  user-health.test.ts
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
chrome-extension/: background.js  content.css  content.js  manifest.json  popup.html  popup.js  sidepanel.html  (+1 more)
model-server/: Dockerfile  docker-compose.test.yml  docker-compose.wsl-test.yml  docker-compose.yml  gpu-setup.sh  hostamar.service  pyproject.toml  ramp-canary.sh  requirements.txt  server.py  setup-home-server.sh  setup.Dockerfile
(+1438 files in other folders)
